--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -9,26 +9,20 @@ visible_in_sidebar: true
 
 ### What is UPI
 
-Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India (NPCI) that facilitates inter-bank transactions through a mobile platform.
+Unified Payments Interface (UPI) is a digtial payment system developed by NPCI that enables customers to pay for goods and services real-time, across any UPI app with different payment methods like savings accounts & credit cards from the convenience of their phone.
 
-By offering a seamless and secure interface, UPI simplifies financial transactions, including instant money transfers, bill payments, and merchant transactions. Through its standardized protocol, users can utilize unique identifiers (UPI IDs) or QR codes for swift payments.
+### What is UPI Merchant Acquiring Platform?
 
-The API architecture of UPI streamlines transactions, ensuring accessibility and efficiency for users while maintaining stringent security protocols to safeguard financial data.
-
-### What is UMAP
-
-UMAP is a comprehensive UPI product suite designed by Setu to empower `merchants` and `aggregators` by providing **state-of-the-art UPI solutions**.
-
-Our platform stands out for its exceptional user experience, cloud-native infrastructure, and latest UPI offerings, facilitated through a wide array of APIs tailored to meet the modern needs of digital commerce.
+UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite designed by Setu to empower `merchants` and `aggregators` by providing **state-of-the-art UPI solutions**. UMAP has a direct connectivity with NPCI, absorbing both acquirer & beneficiary bank legs of the transaction to provide a seamless UPI-first product experience to our users.
 
 #### Key Features
 
--   **Wide Spectrum of UPI Offerings**: Access to a complete range of UPI services, ensuring you can cater to all customer payment preferences.
--   **Refund and Dispute Management**: Specialized APIs for handling refunds and disputes efficiently, enabling smooth operational flow.
--   **Real-Time Notifications and Updates**: Stay informed with instant notifications and updates throughout the transaction process, keeping you in control of your business operations.
+-   **Express Ledger**: Fully managed beneficiary leg to drastically reduce deemed transactions and avoid bank failures.
+-   **Refunds & Disputes**: Specialized APIs for handling refunds and disputes increasing operational value.
+-   **Latest NPCI Compliant Stack**: Latest UPI offerings & compliances due to direct partnership wit NPCI
+
 
 #### Benefits for your Business
-
--   **Enhanced User Experience**: Our focus on seamless integration and user-friendly interfaces results in higher customer satisfaction.
--   **Operational Efficiency**: Our platform simplifies complex processes, from payment acceptance to dispute resolution, ensuring your business runs smoothly.
--   **Informed Decision-Making**: With continuous status updates & analytics, you're always equipped with the latest transaction insights
+-   **UPI Payments**: Enable all UPI payments using QR, Payment Links & In-app deployment with our APIs.
+-   **Recurring Mandates**: Customizable recurring payments with UPI Autopay for all your use cases.
+-   **UPI for Financial Services**: Enable BFSI specific products like Third Party Validation & Single Block Multi Debit.
