--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Overview
 
-### What is UPI
+### What is UPI?
 
 Unified Payments Interface (UPI) is a digtial payment system developed by NPCI that enables customers to pay for goods and services real-time, across any UPI app with different payment methods like savings accounts & credit cards from the convenience of their phone.
 
@@ -22,7 +22,7 @@ UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite desi
 -   **Latest NPCI Compliant Stack**: Latest UPI offerings & compliances due to direct partnership wit NPCI
 
 
-#### Benefits for your Business
+#### What can you do with UMAP?
 -   **UPI Payments**: Enable all UPI payments using QR, Payment Links & In-app deployment with our APIs.
 -   **Recurring Mandates**: Customizable recurring payments with UPI Autopay for all your use cases.
 -   **UPI for Financial Services**: Enable BFSI specific products like Third Party Validation & Single Block Multi Debit.
