fix api details, request response in merchant onboarding

--- a/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
+++ b/content/payments/umap/merchant-onboarding/check-vpa-availability-api.mdx
@@ -1,16 +1,22 @@
 ---
 sidebar_title: Check VPA Availability
-page_title: UMAP - Merchant Onboarding - Check VPA Availability API
+page_title: UMAP - Merchant Onboarding - Check VPA Availability
 order: 2
 visible_in_sidebar: true
 ---
 
-## Check VPA Availability API
+## Check VPA Availability
 
 VPAs act as unique identifiers in the UPI ecosystem. This item can be used to validate the availability of a VPA to check if it can be associated with a merchant.
 
 <table>
     <tbody>
+        <tr>
+            <th>Staging Host</th>
+            <td>
+                <code>https://umap-dev-core.setu.co/api</code>
+            </td>
+        </tr>
         <tr>
             <th>Method</th>
             <td>
@@ -20,7 +26,7 @@ VPAs act as unique identifiers in the UPI ecosystem. This item can be used to va
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/vpas/availability</code>
+                <code>/v1/merchants/vpas/availability</code>
             </td>
         </tr>
         <tr>
@@ -41,10 +47,18 @@ VPAs act as unique identifiers in the UPI ecosystem. This item can be used to va
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
         </tr>
+        <tr>
+            <th>API Reference</th>
+            <td>
+                <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#checkAvailability"target="_blank">
+                    Check VPA Availability ↗
+                </a>
+            </td>
+        </tr>
     </tbody>
 </table>
 
-### Sample request
+###### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -52,7 +66,7 @@ VPAs act as unique identifiers in the UPI ecosystem. This item can be used to va
 }`}
 </CodeBlockWithCopy>
 
-### Sample response
+###### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -60,9 +74,5 @@ VPAs act as unique identifiers in the UPI ecosystem. This item can be used to va
   "status": "available"
 }`}
 </CodeBlockWithCopy>
-
-<a href="/payments/umap/api-reference#/category~vpa/operation~vpa#checkAvailability"target="_blank">
-<code>Check VPA Availability API</code> ↗
-</a>
 
 <WasPageHelpful />
