--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -14,6 +14,12 @@ Create merchants in UPI with this API by providing business details & aggregator
 <table>
     <tbody>
         <tr>
+            <th>Staging Host</th>
+            <td>
+                <code>https://umap-dev-core.setu.co/api</code>
+            </td>
+        </tr>
+        <tr>
             <th>Method</th>
             <td>
                 <code>POST</code>
@@ -22,7 +28,7 @@ Create merchants in UPI with this API by providing business details & aggregator
         <tr>
             <th>Path</th>
             <td>
-                <code>aggregators/merchants</code>
+                <code>/v1/aggregators/merchants</code>
             </td>
         </tr>
         <tr>
@@ -42,10 +48,18 @@ Create merchants in UPI with this API by providing business details & aggregator
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
         </tr>
+        <tr>
+            <th>API Reference</th>
+            <td>
+                <a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper"target="_blank">
+                    Create Merchant ↗
+                </a>
+            </td>
+        </tr>
     </tbody>
 </table>
 
-### Sample request
+###### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -75,7 +89,7 @@ Create merchants in UPI with this API by providing business details & aggregator
 }`}
 </CodeBlockWithCopy>
 
-### Sample response
+###### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -110,9 +124,5 @@ Create merchants in UPI with this API by providing business details & aggregator
   "transactionStatus": "active"
 }`}
 </CodeBlockWithCopy>
-
-<a href="/payments/umap/api-reference#/category~merchant/operation~merchant#createMerchantWrapper"target="_blank">
-<code>Create Merchant</code> ↗
-</a>
 
 <WasPageHelpful />
