--- a/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-vpa-api.mdx
@@ -5,12 +5,18 @@ order: 3
 visible_in_sidebar: true
 ---
 
-## Create VPA API
+## Create VPA
 
 This API can be used to assign a VPA to a merchant which will serve as the merchant identifier across all players in the UPI ecosystem
 
 <table>
     <tbody>
+        <tr>
+            <th>Staging Host</th>
+            <td>
+                <code>https://umap-dev-core.setu.co/api</code>
+            </td>
+        </tr>
         <tr>
             <th>Method</th>
             <td>
@@ -20,7 +26,7 @@ This API can be used to assign a VPA to a merchant which will serve as the merch
         <tr>
             <th>Path</th>
             <td>
-                <code>/merchants/vpas</code>
+                <code>/v1/merchants/vpas</code>
             </td>
         </tr>
         <tr>
@@ -41,10 +47,18 @@ This API can be used to assign a VPA to a merchant which will serve as the merch
                 <code>Content-Type</code>—will be <code>application/json</code>
             </td>
         </tr>
+        <tr>
+            <th>API Reference</th>
+            <td>
+                <a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create"target="_blank">
+                    Create VPA ↗
+                </a>
+            </td>
+        </tr>
     </tbody>
 </table>
 
-### Sample request
+###### Sample request
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -53,7 +67,7 @@ This API can be used to assign a VPA to a merchant which will serve as the merch
 }`}
 </CodeBlockWithCopy>
 
-### Sample response
+###### Sample response
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -66,9 +80,5 @@ This API can be used to assign a VPA to a merchant which will serve as the merch
   "vpa": "deku@okokaxis"
 }`}
 </CodeBlockWithCopy>
-
-<a href="/payments/umap/api-reference#/category~vpa/operation~vpa#create"target="_blank">
-<code>Create VPA API</code> ↗
-</a>
 
 <WasPageHelpful />
