--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -15,6 +15,11 @@ Unified Payments Interface (UPI) is a digtial payment system developed by NPCI t
 
 UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite designed by Setu to empower `merchants` and `aggregators` by providing **state-of-the-art UPI solutions**. UMAP has a direct connectivity with NPCI, absorbing both acquirer & beneficiary bank legs of the transaction to provide a seamless UPI-first product experience to our users.
 
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank/UPI_Merchant_Acquiring_Platform_Setu_Jio_Payments_Bank.png"
+    alt="Bridge"
+/>
+
 #### Key Features
 
 -   **Express Ledger**: Fully managed beneficiary leg to drastically reduce deemed transactions and avoid bank failures.
