--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -15,11 +15,21 @@ UMAP caters for two specific types of users, `Aggregators` and `Merchants`. Befo
 
 ### Aggregators
 
-`TODO : Write a few lines on what makes a user a Aggregator and how it is different from Merchants`
+Aggregators are online and offline platforms that onboard multiple businesses and provide them value added services.
+
+###### Examples
+* Food delivery app that onboards multiple restaurants and provides delivery riders for them.
+* Website creation platform that has a storefront that plugin providers can integrate.
+* Insurance and Loan marketplaces that can be used by any distributors to sell to customers.
 
 ### Merchants
 
-`TODO : Write a few lines on what makes a user a merchant and how it is different from Aggregators`
+Merchants are online and offline businesses that provide goods and services directly to customers.
+
+###### Examples
+* Loan providers who enable customers to get credit into their account and enable collections for repayment.
+* Direct to Consumer Brands who want to enable UPI as a payment option on their website/app or messaging channels.
+* Streaming platforms who provide online services for education & entertainment through subscriptions & one time plans.
 
 <br />
 
