open links on the same tab in payments & onboarding

--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 <Card padding="nano" shape="rounded" marginBottom="micro">
     <Text size="medium" marginBottom="none" paddingRight="medium"> 
         <strong>Prerequesites - </strong>
-        <a href="/payments/umap/quickstart/aggregators" target="_blank">
+        <a href="/payments/umap/quickstart/aggregators">
             Aggregator Quickstart ↗ 
         </a>
     </Text>
@@ -34,7 +34,7 @@ Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-s
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/payments" target="_blank">
+            <a href="/payments/umap/payments">
                 Payments
             </a>
             <p>
@@ -44,7 +44,7 @@ Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-s
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/mandates" target="_blank">
+            <a href="/payments/umap/mandates">
                 Mandates
             </a>
             <p>
