--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -9,7 +9,7 @@ visible_in_sidebar: true
 <Card padding="nano" shape="rounded" marginBottom="micro">
     <Text size="medium" marginBottom="none" paddingRight="medium"> 
         <strong>Prerequesites - </strong>
-        <a href="/payments/umap/api-integration/aggregators" target="_blank">
+        <a href="/payments/umap/api-integration/aggregators">
             Aggregator API Integration ↗ 
         </a>
     </Text>
@@ -90,10 +90,7 @@ This API can be called to update the information associated with the merchant li
                 READ ALSO &rarr;
             </Text>
             <p>Payments</p>
-            <a
-                href="/payments/umap/payments"
-                target="_blank"
-            >
+            <a href="/payments/umap/payments">
                 Enable UPI payments with QR, Collect & TPV ->
             </a>
         </Card>
@@ -109,7 +106,7 @@ This API can be called to update the information associated with the merchant li
                 READ ALSO &rarr;
             </Text>
             <p>Mandates</p>
-            <a href="/payments/umap/mandates" target="_blank">
+            <a href="/payments/umap/mandates">
                 Enable recurring payments with UPI Autopay ->
             </a>
         </Card>
