--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -64,6 +64,7 @@ Create merchants in UPI with this API by providing business details & aggregator
 <CodeBlockWithCopy language="json">
     {`{
     "acceptDeemedTxns": true,
+    "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22"
     "aggregatorAccountId": "328a928f-e277-4798-8e28-4b19a61a8a23",
     "businessName": "deku",
     "businessType": "PUBLIC",
@@ -85,7 +86,10 @@ Create merchants in UPI with this API by providing business details & aggregator
         "sqr",
         "mqr"
     ],
-    "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22"
+    "vpaHandles": [
+        "okaxis",
+        "okhdfc"
+    ]
 }`}
 </CodeBlockWithCopy>
 
@@ -120,7 +124,11 @@ Create merchants in UPI with this API by providing business details & aggregator
     "sqr",
     "mqr"
   ],
-  "standardAccountId": "Deleniti ipsam.",
+   "vpaHandles": [
+    "okaxis",
+    "okhdfc"
+  ],
+  "standardAccountId": "328a928f-e277-4798-8e28-4b19a61a8a22"
   "transactionStatus": "active"
 }`}
 </CodeBlockWithCopy>
