--- a/content/payments/umap/quickstart.mdx
+++ b/content/payments/umap/quickstart.mdx
@@ -38,7 +38,7 @@ Merchants are online and offline businesses that provide goods and services dire
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/quickstart/aggregators" target="_blank">
+            <a href="/payments/umap/quickstart/aggregators">
                 Aggregators
             </a>
             <p>
@@ -49,7 +49,7 @@ Merchants are online and offline businesses that provide goods and services dire
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/quickstart/merchants" target="_blank">
+            <a href="/payments/umap/quickstart/merchants">
                 Merchants
             </a>
             <p>
