--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -98,10 +98,7 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
                 READ NEXT &rarr;
             </Text>
             <p>For Aggregators</p>
-            <a
-                href="/payments/umap/api-integration/aggregators"
-                target="_blank"
-            >
+            <a href="/payments/umap/api-integration/aggregators">
                 Start API integration ->
             </a>
         </Card>
@@ -117,7 +114,7 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
                 READ NEXT &rarr;
             </Text>
             <p>For Merchants</p>
-            <a href="/payments/umap/api-integration/merchants" target="_blank">
+            <a href="/payments/umap/api-integration/merchants">
                 Start API integration ->
             </a>
         </Card>
