--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -8,7 +8,7 @@ visible_in_sidebar: true
 <Card padding="nano" shape="rounded" marginBottom="micro">
     <Text size="medium" marginBottom="none" paddingRight="medium"> 
         <strong>Prerequesites - </strong>
-        <a href="/payments/umap/quickstart/merchants" target="_blank">
+        <a href="/payments/umap/quickstart/merchants">
             Merchant Quickstart ↗ 
         </a>
     </Text>
@@ -30,7 +30,7 @@ This guide will help you get started with UMAP integration as an Merchant.
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/payments" target="_blank">
+            <a href="/payments/umap/payments">
                 Payments
             </a>
             <p>
@@ -40,7 +40,7 @@ This guide will help you get started with UMAP integration as an Merchant.
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/mandates" target="_blank">
+            <a href="/payments/umap/mandates">
                 Mandates
             </a>
             <p>
