--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -98,7 +98,7 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
                 READ NEXT &rarr;
             </Text>
             <p>For Aggregators</p>
-            <a href="/payments/umap/api-integration/aggregators">
+            <a href="/payments/umap/api-integration/aggregators" target="_self">
                 Start API integration ->
             </a>
         </Card>
@@ -114,7 +114,7 @@ You can use the API credentials provided by Setu to test UMAP on sandbox
                 READ NEXT &rarr;
             </Text>
             <p>For Merchants</p>
-            <a href="/payments/umap/api-integration/merchants">
+            <a href="/payments/umap/api-integration/merchants" target="_self">
                 Start API integration ->
             </a>
         </Card>
