api integration - open links on the same tab

--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -34,7 +34,7 @@ Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-s
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/payments">
+            <a href="/payments/umap/payments" target="_self">
                 Payments
             </a>
             <p>
@@ -44,7 +44,7 @@ Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-s
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/mandates">
+            <a href="/payments/umap/mandates" target="_self">
                 Mandates
             </a>
             <p>
