--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -30,7 +30,7 @@ This guide will help you get started with UMAP integration as an Merchant.
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/payments">
+            <a href="/payments/umap/payments" target="_self">
                 Payments
             </a>
             <p>
@@ -40,7 +40,7 @@ This guide will help you get started with UMAP integration as an Merchant.
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/mandates">
+            <a href="/payments/umap/mandates" target="_self">
                 Mandates
             </a>
             <p>
