added changes related to user email and phone to OKYC api docs

--- a/content/data/okyc/api-integration.mdx
+++ b/content/data/okyc/api-integration.mdx
@@ -519,6 +519,10 @@ You may also let your customer receive a new OTP by calling the <strong>Verify O
     "name": "Jignesh Gurjar", 
     "phone": "09c91184c1d610282d661dd63d257e3b44446853fb1388c9d5b", 
     "photo": "/9j/4AAQSkZJRgABAgAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKD==", 
+    "userProfile": {
+      "unmaskedEmail": "abc@def.com",
+      "unmaskedPhone": "9999999999"
+    },
     "verified": { 
       "email": false, 
       "phone": false, 
@@ -717,6 +721,10 @@ Possible values for `status`, received as part of the response—
         "name": "Jignesh Gurjar", 
         "phone": "09c91184c1d610282d661dd63d257e3b44446853fb1388c9d5b", 
         "photo": "/9j/4AAQSkZJRgABAgAAAQABAAD/2wBDAAgGBgcGBQgHBwcJCQgKD==", 
+        "userProfile": {
+          "unmaskedEmail": "abc@def.com",
+          "unmaskedPhone": "9999999999"
+        },
         "verified": { 
               "email": false, 
               "phone": false, 
