--- a/content/data/okyc/api-integration.mdx
+++ b/content/data/okyc/api-integration.mdx
@@ -494,6 +494,8 @@ You may also let your customer receive a new OTP by calling the <strong>Verify O
               <hr className="tertiary" />
               <h5>Response</h5>
               <p>If the value of the <code>shareCode</code> is incorrect, the <code>status</code> associated with this OKYC request <code>id</code> will remain in <code>incomplete</code> state. Please retry the API to move the <code>status</code> to <code>complete</code>.</p>
+              <p>If the unmasked phone and email of the user are available from UIDAI, we return it in the <code>userProfile</code> field of the response. <code>userProfile</code> contains 
+              two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. </p>
               <CodeBlockWithCopy language="json">
                 {`{ 
   "aadhaar": { 
@@ -696,6 +698,8 @@ Possible values for `status`, received as part of the response—
                 all customer KYC details included in the XML, and the URL for
                 the zip file.
               </p>
+              <p>If the unmasked phone and email of the user are available from UIDAI, we return it in the <code>userProfile</code> field of the response. <code>userProfile</code> contains 
+              two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. </p>
               <CodeBlockWithCopy language="json">
                 {`{ 
   "aadhaar": { 
