Content changes for quickstart and API integration sections for UMAP

--- a/content/payments/umap/quickstart/aggregators.mdx
+++ b/content/payments/umap/quickstart/aggregators.mdx
@@ -10,16 +10,19 @@ visible_in_sidebar: true
 This guide will help you get started with UMAP integration as an Aggregator.
 
 ### What is an Aggregator
-
-`TODO : Write about what an Aggregator user is`
+An aggregator on UMAP is a large merchant platform that onboards multiple merchants under them. It can be an online platform or large businesses that operate franchisees. An aggregator on UMAP has the ability to configure and control the payments processes for their merchants like enabling different payment methods, settlement accounts and notifications.  
 
 You're not an Aggregator? Please refer to the [Quickstart](/payments/umap/quickstart) for other types of integration possible
 
-<Callout type='tip'>For custom configuration, reach out to <a href="">umap@setu.co</a></Callout>
+<hr class="primary" />
+
+### Get started
 
 #### Step 1 — Start KYC and business documentation
 
-This is started once Setu’s sales team has interacted with you and confirmed integration. You will need to provide a few KYC details and review some agreements. Please reach out to <a href="">umap@setu.co</a> to get started.
+This is started once Setu’s sales team has interacted with you and finalized the solution that will best meet your needs. After that, we will need business KYC details and finalize commerical agreements. After business formalities are over, an aggregator account is created for you in the system based on the documents submitted and you can begin creating merchants!  
+
+<Callout type='tip'>For custom configurations for your business, reach out to <a href="">umap@setu.co</a></Callout>
 
 <hr class="primary" />
 
