--- a/content/payments/umap/quickstart/merchants.mdx
+++ b/content/payments/umap/quickstart/merchants.mdx
@@ -16,8 +16,7 @@ visible_in_sidebar: true
 This guide will help you get started with UMAP integration as an Merchant.
 
 ### What is an Merchant
-
-`TODO : Write about what an Merchant user is`
+A merchant on UMAP is any business that wants to collect UPI payments from their customers to provide goods & services or use UPI autopay for setting up recurring payments like subscriptions with their customers.  
 
 <hr class="primary" />
 
@@ -25,7 +24,8 @@ This guide will help you get started with UMAP integration as an Merchant.
 ### Get started
 
 ##### Step 1 - Register on Bridge
-`TODO: Write about the bridge setup for merchants in steps`
+Merchants can integrate with UMAP by directly registering themselves on Setu's bridge which will serve as the command center for all UPI products used by them. Merchants can configure payment methods,vpas, settlements, notifications & more directly from bridge.  
+
 
 <hr class="primary" />
 
