--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -17,19 +17,25 @@ visible_in_sidebar: true
 
 ## Aggregator API Integration
 
-This guide will help you get started with UMAP integration as an Aggregator.
+Once the aggregator has been onboarded onto bridge and business formalities have been completed, you can now proceed to integrate UMAP with your internal systems. As an aggregator you have to first create a merchant and then create products that are made available to your merchants based on your configuration.  
 
 #### Step 1 — Configure a merchant
+An aggregator on UMAP has to first create a merchant associated with them by providing merchant's business details and creating a VPA for the merchant which will associate them to the aggregator. The aggregator can now begin configuring UPI products for the merchant.  
 
-`TODO:`
-This is started once Setu’s sales team has interacted with you and confirmed integration. You will need to provide a few KYC details and review some agreements. Please reach out to <a href="">umap@setu.co</a> to get started.
+<Card padding="small" shape="rounded">
+    <a href="/payments/umap/merchant-onboarding" target="_self">
+        Merchant Onboarding
+    </a>
+    <p>
+        Create your first merchant on UMAP
+    </p>
+</Card>
 
 <hr class="primary" />
 
 #### Step 2 — Enable UPI products for merchant
 
-`TODO:`
-Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on sandbox or production.
+Once a merchant has been associated to your aggregator account, you can now enable UPI payments and subscription products for them using our Payments & Mandates APIs.
 
 <Row>
     <Portion desktopSpan="half">
@@ -58,8 +64,8 @@ Contact Setu on <a href="">umap@setu.co</a> to get `x-client-id` and `x-client-s
 
 #### Step 3 — Manage your merchants
 
-`TODO:`
-You can use the API credentials provided by Setu to test UMAP on sandbox
+After creating products for your merchants on UMAP, you can also easily manage merchant operations like modifying/disabling them directly on bridge or through our merchant operations APIs.  
+
 
 <NextPage
     info={{
