content changes to UPI 1.0 payment flows and merchant onboarding - UMAP

--- a/content/payments/umap/merchant-onboarding.mdx
+++ b/content/payments/umap/merchant-onboarding.mdx
@@ -17,9 +17,7 @@ visible_in_sidebar: true
 
 ## Merchant Onboarding
 
-`TODO: Change the content`
-
-The merchant onboarding flow is a critical process designed to seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves several key steps, from initial information collection to the final activation of the merchant’s ability to process transactions.
+A aggregator can seamlessly integrate merchants into the UMAP ecosystem, enabling them to start accepting UPI payments. This journey involves initial information collection to the final activation of the merchant’s ability to process transactions.
 
 <hr class="primary" />
 
@@ -54,7 +52,7 @@ Before a merchant can start transactions, they need a Virtual Payment Address (V
 By meticulously following these steps, UMAP ensures a smooth and efficient onboarding experience for merchants, setting the stage for their successful integration into the digital payments landscape.
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/merchant-onboarding/merchant-onboarding.png"
+  src="https://storage.googleapis.com/strapi-assets/latest/Frame_108/Frame_108.png"
   alt="Bridge"
 />
 
