--- a/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
+++ b/content/payments/umap/merchant-onboarding/create-merchant-api.mdx
@@ -7,9 +7,10 @@ visible_in_sidebar: true
 
 ## Create Merchant
 
-`TODO: change to wrapper API`
+Create merchants in UMAP with this API by providing business details & aggregator ID for onboarding and enabling transactions for the merchant.
 
-Create merchants in UPI with this API by providing business details & aggregator ID for onboarding and enabling transactions for the merchant.
+<Callout type='tip'>For direct merchants, aggregator ID can be accessed from Bridge</Callout>
+<br/>
 
 <table>
     <tbody>
