--- a/content/payments/umap/payments/collect-request/create-collect-request.mdx
+++ b/content/payments/umap/payments/collect-request/create-collect-request.mdx
@@ -6,7 +6,7 @@ visible_in_sidebar: true
 ---
 
 ## Create Collect Request
-
+This API can be used to create a collect request that initiates a UPI transaction on the user's UPI app by taking vpa as an input.
 <table>
     <tbody>
         <tr>
@@ -102,6 +102,8 @@ visible_in_sidebar: true
 
 
 ## Check Collect Request Status
+
+Since collect request directly initiates a transaction on customer's UPI app. The collect request status can also be used to check status of both the transaction and the collect request itself.
 
 <table>
     <tbody>
