--- a/content/payments/umap/payments/intent-qr.mdx
+++ b/content/payments/umap/payments/intent-qr.mdx
@@ -12,7 +12,7 @@ Merchants can offer their customers a seamless payment experience by utilizing U
 <hr class="primary" />
 
 ### Step 1 - Create Payment Link
-The merchant generates a payment link. This unique link serves as the gateway for customers to initiate intent transactions via their Third-Party Application Provider (TPAP).
+In the intent flow, a merchant generates a payment link which can be directly sent to customers, integrated to merchant app or coverted into a QR code which can be scanned by user's UPI app.
 <a href="/payments/umap/api-reference#/category~payment-link/operation~payment-link#create"target="_blank">
     <code>Generate Payment Link</code> ↗
 </a>
@@ -21,10 +21,9 @@ The merchant generates a payment link. This unique link serves as the gateway fo
 <hr class="primary" />
 
 ### Step 2 - Customer Initiates Transaction
-Customers use the generated payment link to commence the payment process through their UPI app. This action triggers the transaction flow, engaging the UMAP system to process the payment.
-
-`Todo: explain between intent and qr`
-
+An intent payment is always initiated by a customer. This can happen in two ways
+* Customer scans a QR code representing the payment link
+* Customer is redirected using payment-link on merchant app
 <hr class="primary" />
 
 ### Step 3 - Retrieve Payment Details
@@ -39,8 +38,8 @@ Following the initiation of the transaction, the system retrieves the payment de
 ## Pay Flow Interactions
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/intent/intent.png"
-  alt="intent qr flow"
+    src="https://storage.googleapis.com/strapi-assets/latest/pay-flow/pay-flow.png"
+    alt="Bridge"
 />
 
 <hr class="primary" />
