--- a/content/payments/umap/payments/intent-qr/check-status.mdx
+++ b/content/payments/umap/payments/intent-qr/check-status.mdx
@@ -5,8 +5,8 @@ order: 2
 visible_in_sidebar: true
 ---
 
-## Check payment link payment status
-
+## Check payment status
+This is a generic payment status api, that accepts the id of the payment-link to show the status of the last payment done on the payment-link.
 <table>
     <tbody>
         <tr>
