--- a/content/payments/umap/payments/intent-qr/create-payment-link.mdx
+++ b/content/payments/umap/payments/intent-qr/create-payment-link.mdx
@@ -155,9 +155,10 @@ visible_in_sidebar: true
 <hr class="primary" />
 
 ## Check Payment Link Status
-
-<p>The merchant can also get the payment link status by payment link id by calling <b><i>check payment link status API</i></b></p>
-
+<Callout type='tip'>This API fetches status of the payment-link itself, not the payment done using it </Callout>
+<br/>
+<p>The merchant can also get the payment link status by payment link id by calling <b><i>check payment link status API</i></b> which can be used for debugging or knowing if payment link is active, inactive or expired.</p>
+<br/>
 <table>
     <tbody>
          <tr>
