--- a/content/payments/umap/payments/tpv.mdx
+++ b/content/payments/umap/payments/tpv.mdx
@@ -5,7 +5,7 @@ order: 3
 visible_in_sidebar: true
 ---
 
-## TPV
+## Third Party Validation
 
 The Third Party Validation (TPV) request introduces an enhanced layer of security to the traditional payment link process by incorporating a conditional validation check of the customer’s bank account details. This procedure is designed to ensure that payments are made from a bank account that has been previously registered with the merchant, typically during the onboarding or KYC process.
 
@@ -33,9 +33,12 @@ Based on the outcome of the validation check, the UMAP system decides whether to
 
 <hr class="primary" />
 
+### TPV Process Flow
+<img
+    src="https://storage.googleapis.com/strapi-assets/latest/TPV-flow/TPV-flow.png"
+    alt="Bridge"
+/>
 This TPV process ensures an additional layer of security, aligning payment transactions with pre-verified bank account details, thus minimizing the risk of fraudulent transactions and enhancing trust between merchants and customers.
-
-<hr class="primary" />
 
 <NextPage
     info={{
