--- a/content/payments/umap/payments/collect-request.mdx
+++ b/content/payments/umap/payments/collect-request.mdx
@@ -11,7 +11,7 @@ The Collect Request in UPI is a customer-driven payment mode where the merchant 
 
 <hr class="primary" />
 
-### Step 1 - Verify Customer VPA
+### Step 1 - Verify Customer VPA (optional)
 In collect, a merchant needs to accept customer vpa as input to create a collect request at customer’s UPI app. The merchant can verify the validity of the vpa input my the customer using this API.
 
 <a href="/payments/umap/api-reference#/category~customer-vpa/operation~customer-vpa#verify"target="_blank">
@@ -20,7 +20,7 @@ In collect, a merchant needs to accept customer vpa as input to create a collect
 
 <hr class="primary" />
 
-### Step 2 - Create Collect Request
+### Step 2 - Create Collect Request 
 A collect product instance is created by the merchant inputting the customer's VPA. This action triggers a collect request, notifying the customer through their UPI app to proceed with the transaction.
 
 <a href="/payments/umap/api-reference#/category~collect/operation~collect#create"target="_blank">
@@ -41,7 +41,7 @@ After the customer responds to the collect request, transaction details can be f
 ## Collect Flow Interactions
 
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/collect/collect.png"
+  src="https://storage.googleapis.com/strapi-assets/latest/collect-flow/collect-flow.png"
   alt="collect flow"
 />
 
