--- a/content/payments/umap/payments/collect-request/check-status.mdx
+++ b/content/payments/umap/payments/collect-request/check-status.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Check collect request payment status
 
-<p>Merchant can track the <b><i>last payment</i></b> associated with the collect request.</p>
+This is a generic payment status api, that accepts the id of the collect request to show the status of the last payment.
 
 <table>
     <tbody>
