--- a/content/data/okyc/api-integration.mdx
+++ b/content/data/okyc/api-integration.mdx
@@ -699,7 +699,7 @@ Possible values for `status`, received as part of the response—
                 the zip file.
               </p>
               <p>If the unmasked phone and email of the user are available from UIDAI, we return it in the <code>userProfile</code> field of the response. <code>userProfile</code> contains 
-              two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. </p>
+              two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. If both are not available, userProfile will be an empty dictionary.</p>
               <CodeBlockWithCopy language="json">
                 {`{ 
   "aadhaar": { 
