added info about purging data

--- a/content/data/okyc/api-integration.mdx
+++ b/content/data/okyc/api-integration.mdx
@@ -700,6 +700,9 @@ Possible values for `status`, received as part of the response—
               </p>
               <p>If the unmasked phone and email of the user are available from UIDAI, we return it in the <code>userProfile</code> field of the response. <code>userProfile</code> contains 
               two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. If both are not available, userProfile will be an empty dictionary.</p>
+              <Callout type="warning">
+                Note: userProfile data will be purged after 24 hours.
+              </Callout>
               <CodeBlockWithCopy language="json">
                 {`{ 
   "aadhaar": { 
