--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -30,12 +30,12 @@ This guide will help you get started with UMAP integration as an Merchant.
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/payments" target="_self">
-                Payments
-            </a>
-            <p>
-                Start accepting UPI payments with QR, Collect & TPV.
-            </p>
+            <Link href="/payments/umap/payments">
+                <a>Payments</a>
+                <p>
+                    Start accepting UPI payments with QR, Collect & TPV.
+                </p>
+            </Link>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
