fix umap api-integration.mdx

--- a/content/payments/umap/api-integration.mdx
+++ b/content/payments/umap/api-integration.mdx
@@ -16,7 +16,7 @@ visible_in_sidebar: true
 
 These will be applicable to all the APIs you call, unless specified otherwise-
 
--   `authorisation` - Bearer <`insert_token_here`>. This token can be generated via the **Generate Access Token API**
+-   `authorisation` - Bearer <code>`insert_token_here`</code>. This token can be generated via the **Generate Access Token API**
 -   `Content-Type` - Set this to `application/json`
 
 ### Generate Access Token API
