using Link tag in merchant api-integration to open links in the same tab.

--- a/content/payments/umap/api-integration/merchants.mdx
+++ b/content/payments/umap/api-integration/merchants.mdx
@@ -38,22 +38,26 @@ Once a merchant has onboarded onto UMAP and has their API credentials, the next 
 <Row>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/payments" target="_self">
-                Payments
-            </a>
-            <p>
-                Start accepting UPI payments with QR, Collect & TPV.
-            </p>
+            <Link href="/payments/umap/payments">
+                <Element as="div">
+                    <Text size="large" weight="600" textColor="blue-90">
+                        Payments
+                    </Text>
+                    <Text weight="400">Start accepting UPI payments with QR, Collect & TPV.</Text>
+                </Element>
+            </Link>
         </Card>
     </Portion>
     <Portion desktopSpan="half">
         <Card padding="small" shape="rounded">
-            <a href="/payments/umap/mandates" target="_self">
-                Mandates
-            </a>
-            <p>
-                Start accepting recurring payments with UPI Autopay.
-            </p>
+            <Link href="/payments/umap/mandates">
+                <Element as="div">
+                    <Text size="large" weight="600" textColor="blue-90">
+                        Mandates
+                    </Text>
+                    <Text weight="400">Start accepting recurring payments with UPI Autopay.</Text>
+                </Element>
+            </Link>
         </Card>
     </Portion>
 </Row>
