added purge info callout

--- a/content/data/okyc/api-integration.mdx
+++ b/content/data/okyc/api-integration.mdx
@@ -496,6 +496,9 @@ You may also let your customer receive a new OTP by calling the <strong>Verify O
               <p>If the value of the <code>shareCode</code> is incorrect, the <code>status</code> associated with this OKYC request <code>id</code> will remain in <code>incomplete</code> state. Please retry the API to move the <code>status</code> to <code>complete</code>.</p>
               <p>If the unmasked phone and email of the user are available from UIDAI, we return it in the <code>userProfile</code> field of the response. <code>userProfile</code> contains 
               two fields, <code>unmaskedPhone</code> and <code>unmaskedEmail</code>. </p>
+              <Callout type="warning">
+                Note: userProfile data will be purged after 24 hours.
+              </Callout>
               <CodeBlockWithCopy language="json">
                 {`{ 
   "aadhaar": { 
